src/test/resources/validation/error/listOfInputWithOptionalField/schema.graphqls
type Query {
  inventory(id: ID!): Inventory
}

type Inventory @table {
  id: ID!
  filmsForInputWithListField(inputWithOptionalField: [InputWithOptionalField!]): [Film!]! @splitQuery
}

type Film @table {
  id: ID!
}

input InputWithOptionalField {
  title: String #Optional
  rating: Rating #Optional
}

enum Rating {
  G @field(name: "G"),
  PG @field(name: "PG"),
  PG_13 @field(name: "PG-13"),
  R @field(name: "R"),
  NC_17 @field(name: "NC-17")
}
